odoo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo
spec:
  selector:
    matchLabels:
      app: odoo
  template:
    metadata:
      labels:
        app: odoo
    spec:
      containers:
      - image: odoo:latest
        name: odoo
        imagePullPolicy: IfNotPresent
        args:
          - "--database=http_test"
          - "--db-filter=http_test"
        securityContext:
          privileged: true
          runAsUser: 101
        ports:
         - containerPort: 8069
        volumeMounts:
        - mountPath: "/var/lib/odoo"
          name: efs
      # restartPolicy: OnFailure
        resources:
          requests:
            cpu: 500m

      volumes:
        - name: efs
          persistentVolumeClaim:
            claimName: efs
