odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-sv
  labels:
    app: odoo
  annotations:
spec:
  selector:
    app: odoo
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8069
  type: LoadBalancer
  selector:
   app: odoo
