ingress.yaml
# This step is not necessary 

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: odoo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
    - host: odoo.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: odoo-sv
              servicePort: 80
